# URDFstudio

./: .gitignore  ARCHITECTURE.md  Cargo.toml  NEXT_SESSION.md  README.md  URDF_Studio_PRD.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-11-urdf-studio-mvp-scaffold.md  2026-06-11-urdf-studio-ui-redesign.md  2026-06-13-viewport-gizmos-and-ui-fixes.md
docs/superpowers/specs/: 2026-06-11-urdf-studio-ui-redesign-design.md  (+1 more)
scripts/: install.sh  tauri.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  xacro.rs
src/api/: commands.ts  dialog.ts  mock.ts
src/hooks/: useFileOps.ts  useUndoRedo.ts  useValidation.ts
src/lib/: collada.test.ts  collada.ts  debounce.ts  gizmo.test.ts  gizmo.ts  kinematics.test.ts  kinematics.ts  numberFormat.test.ts  numberFormat.ts  paths.test.ts  paths.ts  resize.test.ts  resize.ts  scrub.test.ts  scrub.ts  sourceMatch.test.ts  sourceMatch.ts  transforms.test.ts  transforms.ts  xmlHighlight.test.ts  xmlHighlight.ts
src/samples/: sampleRobot.ts
src/state/: issuesStore.ts  robotStore.test.ts  robotStore.ts  selectionStore.ts  uiStore.test.ts  uiStore.ts
src/styles/: globals.css  theme.css
src/types/: robot.ts  validation.ts
urdf-core/: Cargo.toml
urdf-core/src/: ament.rs  lib.rs  mesh.rs  model.rs  parser.rs  serializer.rs  source_tree.rs
urdf-core/tests/: roundtrip.rs  validation.rs
(+30 files in other folders)
