[package]
name = "urdf-studio"
version = "0.1.0"
description = "URDF Studio"
edition = "2021"

[lib]
name = "urdf_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urdf-core = { path = "../urdf-core" }
